aligned correctly prof form

--- a/src/components/ProfessorTable/ProfessorTable.module.css
+++ b/src/components/ProfessorTable/ProfessorTable.module.css
@@ -45,17 +45,132 @@
 
   .fieldLabels{
     display: flex;
-    justify-content: space-between;
+    margin-right: 0rem;
+  
+   align-items: start;
+   ;
+    
 
   }
 
   .fieldLabels h3{
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 10px;
-    margin: 0;
-    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.3rem; 
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 12px;
+    margin-bottom: 0;
+    outline: 1px solid #c4c4c4;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 2px;
+    background-color: rgba(0, 0, 0, 0.034);
+    margin-bottom: 5px;
   }
-  .fieldLabels h3:nth-child(1){
+
+  .label1{
     width: 100px;
+    margin: 5px 7px
+
+  }
+
+  .label2{
+    margin: 5px 7px;
+    width: 100px;
+
+  }
+
+  .label3{
+    margin: 5px 7px;
+    width: 100px;
+  
+  }
+
+  .label4{
+    margin: 5px 7px;
+    width: 120px;
+   
+  }
+  
+  .label5{
+    margin: 5px 7px;
+    width: 70px;
+ 
+  }
+
+
+  /* .label1{
+    width: 105px;
+    margin-top: 0;
+    margin-right: 1rem !important;
+  }
+
+  .label2{
+    margin-top: 0;
+    width: 107px;
+    margin-right: 1rem !important;
+  }
+
+  .label3{
+    margin-top: 0;
+    width: 110px;
+    margin-right: 1rem !important;
+  }
+
+  .label4{
+    margin-top: 0;
+    width: 130px;
+    margin-right: 1rem !important;
+  }
+  
+  .label5{
+    margin-top: 0;
+    width: 70px;
+    margin-right: 1rem !important;
+  } */
+
+
+
+  .tableParent{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+
+  }
+
+  .topItems{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+  }
+
+  .ripple {
+    background-position: center;
+    transition: background 0.6s;
+  }
+  .ripple:hover {
+    background: #f5f5f5 radial-gradient(circle, transparent 1%, #f5f5f5 1%) center/15000%;
+  }
+  .ripple:active {
+    background-color: #dadada;
+    background-size: 100%;
+    transition: background 0s;
+  }
+  .iconWrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  outline: 1px solid #c4c4c4;
+  padding: 10.9px;
+  border-radius: 2px;
+
+  cursor: pointer;
+  }
+  .iconWrapper:hover{
+    outline: 1px solid #000000;
   }
