--- a/src/components/SchedulerFaculty/SchedulerFaculty.module.css
+++ b/src/components/SchedulerFaculty/SchedulerFaculty.module.css
@@ -81,10 +81,14 @@ cursor: pointer;
   outline: 1px solid #000000;
 }
 
-
+.profModal {
+  transform: scale(1.25); /* Change the value to adjust the scaling factor */
+}
 .modalBoxParent{
   display: flex;
-  outline: 1px solid red;
-  justify-content: start;
+  min-width: none;
+  justify-content: center;
   align-items: center;
+  padding: 20px 15px !important;
+
 }
